Correct table heading to remove white space

--- a/src/components/Table/styles.scss
+++ b/src/components/Table/styles.scss
@@ -148,7 +148,7 @@ body.dark-mode .modal-content {
 
     > tr th {
       position: sticky;
-      top: 70px;
+      top: 60px;
       text-wrap: nowrap;
       z-index: 10;
     }
